--- a/ui_desing_file/design_file_pixelation.ui
+++ b/ui_desing_file/design_file_pixelation.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1091</width>
-    <height>888</height>
+    <width>979</width>
+    <height>745</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -85,16 +85,16 @@
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_2">
               <item>
-               <widget class="QLabel" name="label">
+               <widget class="QLabel" name="label_2">
                 <property name="text">
-                 <string>Vertical</string>
+                 <string>x1, Horizontal</string>
                 </property>
                </widget>
               </item>
               <item>
-               <widget class="QLabel" name="label_2">
+               <widget class="QLabel" name="label">
                 <property name="text">
-                 <string>Horizontal</string>
+                 <string>y1, Vertical</string>
                 </property>
                </widget>
               </item>
@@ -103,10 +103,10 @@
             <item>
              <layout class="QVBoxLayout" name="verticalLayout">
               <item>
-               <widget class="QLineEdit" name="line_edit_vertical"/>
+               <widget class="QLineEdit" name="line_edit_horizontal"/>
               </item>
               <item>
-               <widget class="QLineEdit" name="line_edit_horizontal"/>
+               <widget class="QLineEdit" name="line_edit_vertical"/>
               </item>
              </layout>
             </item>
@@ -163,38 +163,6 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_13">
           <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_2">
-            <item>
-             <layout class="QVBoxLayout" name="verticalLayout_8">
-              <item>
-               <widget class="QLabel" name="label_10">
-                <property name="text">
-                 <string>WIDTH</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLabel" name="label_11">
-                <property name="text">
-                 <string>HEIGHT</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </item>
-            <item>
-             <layout class="QVBoxLayout" name="verticalLayout_7">
-              <item>
-               <widget class="QLineEdit" name="line_edit_width"/>
-              </item>
-              <item>
-               <widget class="QLineEdit" name="line_edit_height"/>
-              </item>
-             </layout>
-            </item>
-           </layout>
-          </item>
-          <item>
            <layout class="QHBoxLayout" name="horizontalLayout_3">
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_9">
@@ -230,6 +198,38 @@
                </widget>
               </item>
               <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_2">
+                <item>
+                 <layout class="QVBoxLayout" name="verticalLayout_8">
+                  <item>
+                   <widget class="QLabel" name="label_10">
+                    <property name="text">
+                     <string>x2, Width</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="label_11">
+                    <property name="text">
+                     <string>y2, Height</string>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+                <item>
+                 <layout class="QVBoxLayout" name="verticalLayout_7">
+                  <item>
+                   <widget class="QLineEdit" name="line_edit_width"/>
+                  </item>
+                  <item>
+                   <widget class="QLineEdit" name="line_edit_height"/>
+                  </item>
+                 </layout>
+                </item>
+               </layout>
+              </item>
+              <item>
                <widget class="QPushButton" name="push_button_crop">
                 <property name="text">
                  <string>CROP</string>
@@ -247,6 +247,37 @@
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLineEdit" name="line_edit_shift"/>
+              </item>
+              <item>
+               <widget class="QRadioButton" name="radio_button_right">
+                <property name="text">
+                 <string>Right</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QRadioButton" name="radio_button_left">
+                <property name="text">
+                 <string>Left</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QRadioButton" name="radio_button_up">
+                <property name="text">
+                 <string>Up</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QRadioButton" name="radio_button_down">
+                <property name="text">
+                 <string>Down</string>
                 </property>
                </widget>
               </item>
@@ -281,7 +312,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1091</width>
+     <width>979</width>
      <height>21</height>
     </rect>
    </property>
